--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -50,9 +50,9 @@
   \item[$\mathbb{I}$] The set of work items. See equation \ref{eq:workitem}.
   \item[$\mathbb{J}$] The set of work execution errors.
   \item[$\mathbb{K}$] The set of validator key-sets. See equation \ref{eq:validatorkeys}.
-  \item[$\mathbb{L}$] The set of work results.
+  \item[$\mathbb{L}$] The set of work-digests.
   \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. See equation \ref{eq:pvmmemory}.
-  \item[$\operandtuple$] The accumulation operand element, corresponding to a single work result.
+  \item[$\operandtuple$] The accumulation operand element, corresponding to a single work-item.
   \item[$\mathbb{P}$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\avspec$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
@@ -80,7 +80,7 @@
 %  \item[$\gascounter$] Unused. %	Θ
 %  \item[$\Pi$] Unused. %	Π
   \item[$\Lambda$] The historical lookup function. See equation \ref{eq:historicallookup}. % Λ
-  \item[$\Xi$] The work result computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
+  \item[$\Xi$] The work-digest computation function. See equation \ref{eq:workdigestfunction}. %	Ξ
   \item[$\Upsilon$] The general state transition function. See equations \ref{eq:statetransition}, \ref{eq:transitionfunctioncomposition}. %	ϒ
 %  \item[$\Sigma$] Unused. %	Σ
   \item[$\Phi$] The key-nullifier function. See equation \ref{eq:blacklistfilter}. %	Φ
