--- a/preamble.tex
+++ b/preamble.tex
@@ -187,7 +187,7 @@
 \newcommand*{\wi¬service}{\¬service}
 \newcommand*{\wi¬codehash}{\¬codehash}
 \newcommand*{\wi¬payload}{\¬payload}
-\newcommand*{\wi¬refgaslimit}{g} % O/L ¬gaslimit
+\newcommand*{\wi¬refgaslimit}{g} % O/L ¬gaslimit TODO: use r instead
 \newcommand*{\wi¬accgaslimit}{a} % O/L ¬authorizer
 \newcommand*{\wi¬exportcount}{\¬exportcount}
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
